- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 8.0.1
 
- 
        
 - 
        06402e0dc6 (qt-creator/qt-creator/9.0) 06402e0dc6 (qt-creator/qt-creator/master) 06402e0dc6 (qt-creator/qt-creator/qds/dev)
 
When you use a MacBook Pro with a Touch Bar the "Edit Bookmark" button is to the left of the often-used "Header/Source" button.
Pressing the "Edit Bookmark" button launches new bookmark prompts every time it is touched, and they must be manually closed in reverse order of when they were brought up. CTL+SHIFT+M keyboard shortcut doesn't work to close them.
The customer would like the multiple bookmark prompt phenomena to not occur as well as possibly reordering the two buttons to "Header/Source" is on the left.
See attached video file to see the multiple bookmark dialogs appearing.